[package]
name = "srtp"
version = "0.5.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]
edition = "2018"

description = "Rusty wrapper for libsrtp2"
documentation = "https://docs.rs/srtp/0.5.0/srtp"
repository = "https://github.com/HyeonuPark/srtp"
keywords = ["srtp"]
categories = ["multimedia", "network-programming"]
license = "MIT OR Apache-2.0"

[features]
enable-debug-logging = ["srtp2-sys/enable-debug-logging", "srtp2-sys/enable-log-stdout"]
dynamic-linking = ["srtp2-sys/dynamic-linking"]

[dependencies]
srtp2-sys = { git = "https://github.com/tronje/srtp2-sys", branch = "dynamic-linking" }
bytes = "0.4"
